<resources>
    <string name="app_name">WHOIS Hakaton</string>
    <string name="language">LAT</string>

    <!-- Activity region -->
    <string name="home_fragment">Početna</string>
    <string name="favorites_fragment">Omiljeno</string>
    <string name="search_history_fragment">Istorija pretrage</string>
    <!-- end region -->

    <!-- Home region -->
    <string name="home_fragment_title">Pronađite informacije o bilo kom domenu</string>
    <string name="feeling_lucky">Iznenadi me</string>
    <string name="search_bar_hint">Pretražite domen...</string>
    <string name="search_bar_button_text">PRETRAŽI</string>
    <string name="most_searched_title">Najčešće pretraživano</string>
    <!-- end region -->

    <!-- Search History region -->
    <string name="search_history_title">Istorija pretrage</string>
    <string name="search_date">Pretraženo %1$s</string>
    <!-- end region -->

    <!-- Favorites region -->
    <string name="favorite_domains">Omiljeni domeni</string>
    <string name="domain_is_available">Domen je dostupan</string>
    <string name="domain_expires">Domen ističe %1$s</string>
    <!-- end region -->

    <!-- Search region -->
    <string name="created_date">Kreirano %1$s</string>
    <string name="expired_date">Ističe %1$s</string>
    <string name="set_alarm_for_domain_expiry">Postavite alarm za istek domena</string>
    <string name="alarm_domain_expires_title">Domen %1$s je istekao</string>
    <string name="alarm_domain_expires_description">Domen sada možete zakupiti</string>
    <string name="notify_me">Obavesti me kad domen istekne</string>
    <string name="rent_domain">Zakupite domen</string>
    <string name="available_domain">Ovaj domen je slobodan, ako želite da ga zakupite, kliknite na dugme ispod</string>
    <string name="way_to_notify">Kako želite da vas obavestimo?</string>
    <string name="notification">Notifikacija</string>
    <string name="email">Mejl</string>
    <!-- end region -->

    <!-- EnterEmail region -->
    <string name="enter_email">Unesite mejl</string>
    <string name="confirm">Potvrdi</string>
    <!-- end region -->

</resources>
