<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?white">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:fontFamily="@font/montserratregular"
        android:gravity="center"
        android:text="@string/way_to_notify"
        android:textColor="?domain_details_text_color"
        android:textSize="@dimen/text_size_xmedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/feeling_lucky_button_background"
        android:fontFamily="@font/montserratmedium"
        android:gravity="center"
        android:text="@string/notification"
        android:textColor="?white"
        android:textSize="@dimen/text_size_xmedium"
        android:theme="@style/ThemeOverlay.App.ClassicButtonDomainDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_title" />

    <Button
        android:id="@+id/btn_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_standard"
        android:background="@drawable/feeling_lucky_button_background"
        android:fontFamily="@font/montserratmedium"
        android:gravity="center"
        android:text="@string/email"
        android:textColor="?white"
        android:textSize="@dimen/text_size_xmedium"
        android:theme="@style/ThemeOverlay.App.ClassicButtonDomainDetails"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn_notification"
        app:layout_constraintStart_toStartOf="@id/btn_notification"
        app:layout_constraintTop_toBottomOf="@id/btn_notification" />

</androidx.constraintlayout.widget.ConstraintLayout>
