<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?primary">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        app:layout_constraintBottom_toBottomOf="@id/tv_domain_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_domain_name"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/tv_domain_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_smedium"
        android:fontFamily="@font/montserratregular"
        android:gravity="center"
        android:textColor="?white"
        android:textSize="@dimen/text_size_xxlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_xxxlarge"
        android:background="@drawable/most_searched_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_domain_name">

        <TextView
            android:id="@+id/tv_enter_email_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_standard"
            android:fontFamily="@font/montserratsemibold"
            android:gravity="center"
            android:text="@string/enter_email"
            android:textColor="?domain_details_text_color"
            android:textSize="@dimen/text_size_xmedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_standard"
            android:background="@drawable/enter_email_background"
            android:fontFamily="@font/montserratregular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding_standard"
            android:textColor="?domain_details_text_color"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_enter_email_title" />

        <Button
            android:id="@+id/btn_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_standard"
            android:background="@drawable/feeling_lucky_button_background"
            android:fontFamily="@font/montserratmedium"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="?white"
            android:textSize="@dimen/text_size_xmedium"
            android:theme="@style/ThemeOverlay.App.ClassicButtonDomainDetails"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
